TEST_PROGRAMS/VALID_TYPECHECK/add_strings.go
package main;

func main() {
    
    //this assignment is allowed
    var c string = "1234hello";
    var x string = c+c;
    print(x);
}
