TEST_PROGRAMS/INVALID/04/1.go
package main

func main() {
    //Invalid hex
    var x = 0x
    x++ // "use" x
}
